Cleaned App.xaml.cs | Organized other stuff | Removed useless calls. | Fixed Build for Github | Some temp icons are included will be removed later | WKitGlobal introduced : Holds helpers for global stuff. And A AppHelper to register the ViewModels there instead. | Added Homepage button on ribbon | Removed old buttons on titlebar | Added Title |

--- a/WolvenKit/Views/HomePage/HomePageView.xaml
+++ b/WolvenKit/Views/HomePage/HomePageView.xaml
@@ -26,7 +26,7 @@
     </catel:UserControl.Resources>
 
 
-    <Grid x:Name="FocusGrid" Background="{DynamicResource Fluent.Ribbon.Brushes.BackstageTabControl.ItemsPanelBackground}"  hc:ThemeManager.AccentColor="{DynamicResource MahApps.Brushes.Accent3}"  >
+    <Grid x:Name="FocusGrid" Background="{DynamicResource Fluent.Ribbon.Brushes.BackstageTabControl.ItemsPanelBackground}"  hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}"  >
 
 
         <Grid  Background="Transparent" MouseLeftButtonDown="Grid_MouseLeftButtonDown_1">
