Cleaned App.xaml.cs | Organized other stuff | Removed useless calls. | Fixed Build for Github | Some temp icons are included will be removed later | WKitGlobal introduced : Holds helpers for global stuff. And A AppHelper to register the ViewModels there instead. | Added Homepage button on ribbon | Removed old buttons on titlebar | Added Title |

--- a/WolvenKit/Views/SettingsPages/GeneralSettingsView.xaml
+++ b/WolvenKit/Views/SettingsPages/GeneralSettingsView.xaml
@@ -7,7 +7,7 @@
                    IsVisibleChanged="UserControl_IsVisibleChanged"
                    >
 
-    <Grid hc:ThemeManager.AccentColor="{DynamicResource MahApps.Brushes.Accent3}" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
+    <Grid hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
         <hc:SideMenu Width="150" SideBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Left" >
 
             <hc:SideMenuItem x:Name="GlobalSubItem" Selected="GlobalSubItem_Selected" >
