--- a/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/FinalizeSetupView.xaml
+++ b/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/FinalizeSetupView.xaml
@@ -63,7 +63,7 @@
                             <Grid Margin="5,32,10,0" >
 
                                 <TextBlock Text="TW3 Executable Path" VerticalAlignment="Center"></TextBlock>
-                                <TextBox  IsEnabled="False" Margin="200,0,0,0" Text="{Binding W3ExecutablePath}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
+                                <TextBox  IsEnabled="False" Margin="200,0,0,0" Text="{Binding W3ExePath}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
                             </Grid>
                             <Grid Margin="5,32,10,0" >
 
@@ -78,14 +78,14 @@
                             <Grid Margin="5,32,10,0" >
 
                                 <TextBlock Text="CP77 Executable Path" VerticalAlignment="Center"></TextBlock>
-                                <TextBox IsEnabled="False" Margin="200,0,0,0" Text="{Binding CP77ExecutablePath}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
+                                <TextBox IsEnabled="False" Margin="200,0,0,0" Text="{Binding CP77ExePath}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
                             </Grid>
 
                             <hc:Divider Margin="0,32,10,5"></hc:Divider>
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom">
-                                <Button Height="45" Content="Yes, Confirm my settings!" Margin="0,0,0,0"></Button>
+                                <Button Height="45" Content="Yes, Confirm my settings!" Margin="0,0,0,0" Click="ConfirmSettings_Click"></Button>
 
-                                <Button Height="45" Content="No, Cancel my settings!" Margin="15,0,10,0"></Button>
+                                <Button Height="45" Content="No, Cancel my settings!" Margin="15,0,10,0" Click="CancelSettings_Click"></Button>
                             </StackPanel>
                         </StackPanel>
 
