--- a/WolvenKit/Views/HomePage/HomePageView.xaml
+++ b/WolvenKit/Views/HomePage/HomePageView.xaml
@@ -12,7 +12,7 @@
     mc:Ignorable="av"
     MinHeight="810"
     MinWidth="1060"
-    MouseDoubleClick="UserControl_MouseDoubleClick"
+  
     
     x:Class="WolvenKit.Views.HomePage.HomePageView" IsVisibleChanged="UserControl_IsVisibleChanged">
 
@@ -26,19 +26,21 @@
     </catel:UserControl.Resources>
 
 
-    <Grid x:Name="FocusGrid" Background="{DynamicResource Fluent.Ribbon.Brushes.BackstageTabControl.ItemsPanelBackground}"  hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}"  >
+    <Grid  x:Name="FocusGrid" Background="{DynamicResource Fluent.Ribbon.Brushes.BackstageTabControl.ItemsPanelBackground}"  hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}"  >
 
 
-        <Grid  Background="Transparent" MouseLeftButtonDown="Grid_MouseLeftButtonDown_1">
 
-        </Grid>
-        <Grid   VerticalAlignment="Stretch"  HorizontalAlignment="Stretch" Margin="200,0,450,0" MouseLeftButtonDown="Grid_MouseLeftButtonDown_1">
-                <Mid:TopicView x:Name="TopicViewer"/>
+
+        <Grid MouseLeftButtonDown="Grid_MouseLeftButtonDown_2"  Background="Transparent" >
 
         </Grid>
-        <Grid Margin="15" HorizontalAlignment="Left">
 
-          
+        <Grid        MouseLeftButtonDown="Grid_MouseLeftButtonDown_1" VerticalAlignment="Top" Height="20" >
+        </Grid>
+
+        <Grid Effect="{DynamicResource  MahApps.DropShadowEffect.Menu}"  Margin="15" HorizontalAlignment="Left">
+
+
             <Border CornerRadius="15" Background="{DynamicResource RegionBrush}">
 
                 <hc:SideMenu   x:Name="LeftSideMenu" Margin="0,90,0,15" SideBrush="{DynamicResource MahApps.Brushes.AccentBase}" Background="{DynamicResource MahApps.Brushes.ThemeBackground}"  BorderThickness="0" Width="200" SubSideBrush="{DynamicResource MahApps.Brushes.Accent2}">
@@ -82,7 +84,7 @@
                         </hc:SideMenuItem.Icon>
                     </hc:SideMenuItem>
 
-             
+
 
                     <hc:SideMenuItem x:Name="SideMenu_SettingsItem" Header="Settings"  Margin="0,0,0,0" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_SettingsItem_Selected">
                         <hc:SideMenuItem.Icon>
@@ -90,7 +92,7 @@
                         </hc:SideMenuItem.Icon>
                     </hc:SideMenuItem>
 
-                    <hc:SideMenuItem IsSelected="False" x:Name="SideMenu_UserItem" Header="Account"  Margin="0,0,0,0" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}">
+                    <hc:SideMenuItem IsSelected="False" x:Name="SideMenu_UserItem" Header="Account"  Margin="0,0,0,0" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_UserItem_Selected">
                         <hc:SideMenuItem.Icon>
                             <iconPacks:Codicons Height="25" Kind="Account" Width="25"/>
                         </hc:SideMenuItem.Icon>
@@ -129,7 +131,7 @@
 
                     </hc:SideMenuItem>
 
-      
+
 
                 </hc:SideMenu>
 
@@ -149,9 +151,9 @@
 
             </Fluent:Button>
 
-  
+
             <StackPanel Margin="5,15,0,0" Orientation="Horizontal" VerticalAlignment="Top" Height="54">
-                
+
             </StackPanel>
 
             <Grid VerticalAlignment="Top" Margin="0,15,0,0" >
@@ -160,7 +162,7 @@
                         <Image HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" Width="152" Height="152"  Source="pack://application:,,,/Resources/Icons/3.png">
 
                         </Image>
-                       
+
                     </Grid>
 
                 </Border>
@@ -170,11 +172,11 @@
 
         </Grid>
 
-       
 
 
 
-        <Border CornerRadius="10" Margin="230,15,15,15" Background="{DynamicResource RegionBrush}" >
+
+        <Border  Effect="{DynamicResource  MahApps.DropShadowEffect.Menu}" CornerRadius="10" Margin="230,15,15,15" Background="{DynamicResource RegionBrush}" >
             <Border Margin="1,15,1,15" CornerRadius="10" Background="{DynamicResource MahApps.Brushes.ThemeBackground}">
                 <hc:TransitioningContentControl TransitionMode="Left2RightWithFade">
                     <Grid x:Name="PageViewGrid" Margin="0"/>
@@ -183,7 +185,7 @@
 
             </Border>
         </Border>
-        
+
 
     </Grid>
 
