--- a/WolvenKit/Views/HomePage/HomePageView.xaml
+++ b/WolvenKit/Views/HomePage/HomePageView.xaml
@@ -127,12 +127,18 @@
                             <hc:SideMenuItem.Icon>
                                 <iconPacks:PackIconCodicons Height="13" Kind="Cloud" Width="13" HorizontalAlignment="Center"/>
                             </hc:SideMenuItem.Icon>
-                        </hc:SideMenuItem>
+                        </hc:SideMenuItem>                        
+                        
+                        
 
                     </hc:SideMenuItem>
 
 
-
+                    <hc:SideMenuItem IsSelected="False" x:Name="SideMenu_DebugItem" Header="DEBUG"  Margin="0,30,0,0" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_DebugItem_Selected">
+                        <hc:SideMenuItem.Icon>
+                            <iconPacks:Codicons Height="25" Kind="Debug" Width="25"/>
+                        </hc:SideMenuItem.Icon>
+                    </hc:SideMenuItem>
                 </hc:SideMenu>
 
             </Border>
