--- a/WolvenKit/Views/Editors/CodeEditor/CodeEditorView.xaml
+++ b/WolvenKit/Views/Editors/CodeEditor/CodeEditorView.xaml
@@ -4,15 +4,19 @@
                   xmlns:catel="http://schemas.catelproject.com" 
                   xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit" 
                   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" 
-                  xmlns:hc="https://handyorg.github.io/handycontrol"
+                  xmlns:hc="https://handyorg.github.io/handycontrol"   
+                  xmlns:aeditCmd="clr-namespace:ICSharpCode.AvalonEdit;assembly=ICSharpCode.AvalonEdit"
+                  xmlns:behav="clr-namespace:WolvenKit.Behavior"
                   ShowInTaskbar="True" 
                   AllowsTransparency="True" 
                   ResizeMode="CanResizeWithGrip" 
                   BorderBrush="{x:Null}" 
                   WindowStartupLocation="CenterScreen"
                   WindowStyle="None" 
+                  MaxHeight="600"
+                  MaxWidth="500"
                   Title="Code Editor" IsVisibleChanged="DataWindow_IsVisibleChanged">
-    
+
     <catel:DataWindow.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -58,7 +62,7 @@
                     <MenuItem Header="View"/>
                     <MenuItem Header="Compile"/>
                 </Menu>
-                
+
                 <iconPacks:PackIconCodicons Margin="13,0,0,0" Height="23" Kind="Code" Width="23" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
             </Grid>
@@ -70,20 +74,20 @@
             <Grid  Margin="3,33,3,3">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="100"/>
                 </Grid.ColumnDefinitions>
-
-                <hc:TabControl ShowCloseButton="True" Grid.Column="1" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
+                
+                <hc:TabControl ShowCloseButton="True" Grid.Column="0" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
                     <hc:TabItem Header="wat">
-
+                      
                     </hc:TabItem>
                     <hc:TabItem Header="wat">
 
                     </hc:TabItem>
                 </hc:TabControl>
             </Grid>
-            
-            
+
+
         </Grid>
     </Border>
 
